--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -2095,7 +2095,7 @@ p {
     position: relative;
     top: -14px;
     color: #004a53;
-    background-color: inherit;
+    background-color: #f5f5f5;
     font-size: 14px;
     padding: 0 4px;
     font-weight: 500;
