--- a/public/css/style_theme.css
+++ b/public/css/style_theme.css
@@ -212,6 +212,7 @@ a.nav-link.active {
 
 .product-section-teal {
     background-color: #004a53;
+    color: white;
 }
 
 .product-section-yellow {
